--- a/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/sys/noSaveDlg.xhtml
@@ -18,13 +18,13 @@
 
                 <p:toolbar styleClass="ui-grid-col-12">
                     <f:facet name="right">
-                        <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; padding-top: 3px;"
+                        <p:commandButton value="#{bundle.ExitNoSave}" style="float:right; "
                                          title="#{bundle.ExitWithoutSaving}"
                                          action="#{_bean.onFinalCancelSave()}"
                                          onclick="PF('confirm').hide();">
                         </p:commandButton>
                         <p:spacer width="5" />
-                        <p:commandButton value="#{bundle.Back}" style="float:right; padding-top: 3px;"
+                        <p:commandButton value="#{bundle.Back}" style="float:right; "
                                          title="#{bundle.GoBackCard}"
                                          onclick="PF('confirm').hide();">
                         </p:commandButton>
