--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -93,10 +93,11 @@
 
         <p:tab id="accountTab" title="#{bundle.UserAccount}">
             <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12" columnClasses="ui-grid-col-12" >
-                <p:outputLabel value="#{bundle.Login}" />
+                <p:outputLabel value="#{bundle.Login}" indicateRequired="true"/>
                 <h:panelGroup>
                     <p:inputText id="login" value="#{_bean.editedItem.login}"
                                  disabled="#{_bean.isReadOnly()}"
+                                 required="#{param['isRequired'] == 'true'}"
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                  onchange="return itemChange = 1;">
                     </p:inputText>
@@ -109,10 +110,11 @@
                     </p:commandButton>
                 </h:panelGroup>
 
-                <p:outputLabel value="#{bundle.password}" />
+                <p:outputLabel value="#{bundle.password}" indicateRequired="true"/>
                 <p:inputText id="pwl" value="#{_bean.password}"
                              disabled="#{_bean.isReadOnly()}"
                              onchange="return itemChange = 1;"
+                             required="#{param['isRequired'] == 'true'}"
                              valueChangeListener="#{userCardBean.onChangePassword}"
                              onkeypress="checkEsc(#{_bean.cancelBtnName});">
                 </p:inputText>
