--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -73,6 +73,7 @@
                                 <ui:insert name="specActionMenu" />
                                 <p:separator />
                                 <p:menuitem icon="ui-icon-star" value="#{bundle.AddToFavorites}"
+                                            disabled="#{_bean.editedItem.id == null}"
                                             actionListener="#{_bean.addInFavorites(_bean.editedItem)}"/>
                                 <p:separator />
                                 <p:menuitem icon="ui-icon-disk" value="#{bundle.Save}"
