--- a/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
@@ -61,7 +61,7 @@
                                 <p:panelGrid columns="2" layout="grid" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
                                     #{bundle.With}
                                     <p:calendar value="#{docReportBean.dateStart}" id="dateStart" styleClass="ui-grid-col-12"
-                                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20"                                                 
+                                                navigator="true" yearRange="c-120:c+20"
                                                 locale="#{sessionBean.locale}"
                                                 required="#{param['isRequired'] == 'true'}"
                                                 requiredMessage="#{bundle.Field} [#{bundle.DateBegin}: #{bundle.With}] #{bundle.MustBeFilled}">
@@ -71,7 +71,7 @@
                                 <p:panelGrid columns="2" layout="grid" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
                                     #{bundle.At}
                                     <p:calendar value="#{docReportBean.dateEnd}" id="dateEnd" styleClass="ui-grid-col-12"
-                                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                                                navigator="true" yearRange="c-120:c+20"
                                                 locale="#{sessionBean.locale}"
                                                 required="#{param['isRequired'] == 'true'}"
                                                 requiredMessage="#{bundle.Field} [#{bundle.DateEnd}: #{bundle.At}] #{bundle.MustBeFilled}">
