--- a/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
@@ -119,7 +119,7 @@
                     #{bundle.With}
                     <p:calendar value="#{_explorerBean.model.dateCreateStart}" id="dateCreateStart" 
                                 widgetVar="dateCreateStartSearche"
-                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                                navigator="true" yearRange="c-120:c+20"
                                 locale="#{sessionBean.locale}"
                                 required="#{_explorerBean.model.dateCreateSearche and param['isRequired'] == 'true'}"
                                 requiredMessage="#{bundle.Field} [#{bundle.DateCreate}: #{bundle.With}] #{bundle.MustBeFilled}"
@@ -131,7 +131,7 @@
                     #{bundle.At}
                     <p:calendar value="#{_explorerBean.model.dateCreateEnd}" id="dateCreateEnd" 
                                 widgetVar="dateCreateEndSearche"
-                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                                navigator="true" yearRange="c-120:c+20"
                                 locale="#{sessionBean.locale}"
                                 required="#{_explorerBean.model.dateCreateSearche and param['isRequired'] == 'true'}"
                                 requiredMessage="#{bundle.Field} [#{bundle.DateCreate}: #{bundle.At}] #{bundle.MustBeFilled}"
@@ -152,7 +152,7 @@
                     #{bundle.With}
                     <p:calendar value="#{_explorerBean.model.dateChangeStart}" id="dateChangeStart"
                                 widgetVar="dateChangeStartSearche"
-                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20"
+                                navigator="true" yearRange="c-120:c+20"
                                 locale="#{sessionBean.locale}"
                                 required="#{_explorerBean.model.dateChangeSearche and param['isRequired'] == 'true'}"
                                 requiredMessage="#{bundle.Field} [#{bundle.DateChange}: #{bundle.With}] #{bundle.MustBeFilled}"
@@ -163,7 +163,7 @@
                     #{bundle.At}
                     <p:calendar value="#{_explorerBean.model.dateChangeEnd}" id="dateChangeEnd"
                                 widgetVar="dateChangeEndSearche"
-                                showButtonPanel="true" navigator="true" yearRange="c-120:c+20" 
+                                navigator="true" yearRange="c-120:c+20"
                                 locale="#{sessionBean.locale}"
                                 required="#{_explorerBean.model.dateChangeSearche and param['isRequired'] == 'true'}"
                                 requiredMessage="#{bundle.Field} [#{bundle.DateChange}: #{bundle.At}] #{bundle.MustBeFilled}"
